# rero-invenio-files

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  run-tests.sh
.github/: auto_assign.yml
.github/workflows/: continuous-integration-test.yml  pypi-publish.yml  release.yml  tests.yml
docs/: changes.rst  conf.py  index.rst
rero_invenio_files/: __init__.py  config.py  ext.py  views.py
rero_invenio_files/pdf/: __init__.py
rero_invenio_files/records/: api.py  components.py  models.py  permissions.py  previewer.py  resources.py  schema.py  services.py
rero_invenio_files/records/jsonschemas/: __init__.py
rero_invenio_files/records/mappings/os-v2/: __init__.py
rero_invenio_files/records/mappings/v7/records/: record-v1.0.0.json
tests/: conftest.py  test_pdf_generator.py  test_rero_invenio_files.py
tests/mock_module/: __init__.py  permissions.py  services.py
