[project]
name = "rero-invenio-files"
version = "1.1.0"
description = "Files support for the RERO invenio instances."
authors = [{name = "RERO",email = "software@rero.ch"}]
license = "GNU Affero General Public License v3.0"
readme = "README.rst"
requires-python = ">=3.9.2, <3.13"


dependencies = [
    "invenio-records-resources (>=7.0.0)",
    "invenio-search [elasticsearch7] (>=3.0.0,<4.0.0)",
    "invenio-db [postgresql] (>=2.0.0,<3.0.0)",
    "fpdf2",
    "pymupdf",
    "invenio-previewer",
    "invenio-theme"
]

[tool.poetry.group.dev.dependencies]
invenio-app = ">=2.0.0,<3.0.0"
pytest-invenio = ">=3.0.0,<4.0.0"
pytest-black = ">=0.4.0"
pytest-black-ng = ">=0.4.0"
sphinx = ">=4.5.0"
mock = ">=2.0.0"
pip-audit = ">=2.8.0,<3.0.0"
autoflake = ">=1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."invenio_base.apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[project.entry-points."invenio_base.api_apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[project.entry-points."invenio_base.blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"

[project.entry-points."invenio_base.api_blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"
rero_invenio_files_records = "rero_invenio_files.views:create_records_blueprint_from_app"
rero_invenio_files_records_files = "rero_invenio_files.views:create_records_files_blueprint_from_app"

[project.entry-points."invenio_db.models"]
records = "rero_invenio_files.records.models"

[project.entry-points."invenio_jsonschemas.schemas"]
records = "rero_invenio_files.records.jsonschemas"

[project.entry-points."invenio_search.mappings"]
records = "rero_invenio_files.records.mappings"

# [project.entry-points."invenio_base.finalize_app"]
# records = "rero_invenio_files.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
records = "rero_invenio_files.ext:api_finalize_app"

[tool.distutils.bdist_wheel]
universal = true

[tool.pydocstyle]
add_ignore = "D401"

[tool.isort]
profile="black"

[tool.pytest.ini_options]
addopts = "--black --isort --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=rero_invenio_files --cov-report=term-missing"
testpaths = "docs tests rero_invenio_files"
