[project]
name = "rero-invenio-files"
version = "1.2.0"
description = "Files support for the RERO invenio instances."
authors = [{name = "RERO",email = "software@rero.ch"}]
license = "AGPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9.2, <3.13"


dependencies = [
    "invenio-records-resources (>=7.0.0)",
    "invenio-search [elasticsearch7] (>=3.0.0,<4.0.0)",
    "invenio-db [postgresql] (>=2.0.0,<3.0.0)",
    "fpdf2",
    "pymupdf",
    "invenio-previewer",
    "invenio-theme",
    "poethepoet>=0.36.0",
]

[dependency-groups]
dev = [
    "invenio-app (>=2.0.0,<3.0.0)",
    "pytest-invenio (>=3.0.0,<4.0.0)",
    "mock>=2.0.0",
    "pip-audit (>=2.8.0,<3.0.0)",
    "ruff>=0.12.3",
]

[project.entry-points."invenio_base.apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[project.entry-points."invenio_base.api_apps"]
rero-invenio-files = "rero_invenio_files.ext:REROInvenioFiles"

[project.entry-points."invenio_base.blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"

[project.entry-points."invenio_base.api_blueprints"]
rero_invenio_files = "rero_invenio_files.views:blueprint"
rero_invenio_files_records = "rero_invenio_files.views:create_records_blueprint_from_app"
rero_invenio_files_records_files = "rero_invenio_files.views:create_records_files_blueprint_from_app"

[project.entry-points."invenio_db.models"]
records = "rero_invenio_files.records.models"

[project.entry-points."invenio_jsonschemas.schemas"]
records = "rero_invenio_files.records.jsonschemas"

[project.entry-points."invenio_search.mappings"]
records = "rero_invenio_files.records.mappings"

# [project.entry-points."invenio_base.finalize_app"]
# records = "rero_invenio_files.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
records = "rero_invenio_files.ext:api_finalize_app"

[tool.ruff]
extend-exclude = ["config.py"]
line-length = 120

[tool.ruff.lint]
extend-select = ["A", "C4", "DTZ", "INT", "ISC", "T20", "PIE", "Q", "RET", "SIM", "I", "N", "PERF", "W", "D", "F", "UP", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.poe.tasks]
run_tests = {cmd = "./run-tests.sh", help = "Runs all tests"}
format = {cmd = "ruff format .", help = "Format all files"}
lint = {cmd = "ruff check", help = "Checks linting"}
tests = {cmd = "pytest", help = "pytest"}
tests_debug = {cmd = "pytest -s -vv --no-cov", help = "pytest -s -vv --no-cov"}

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-glob=\"*.rst\" --doctest-modules --cov=rero_invenio_files --cov-report=term-missing"
testpaths = "docs tests rero_invenio_files"
# not displaying all the PendingDeprecationWarnings from invenio
filterwarnings = "ignore::PendingDeprecationWarning"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
package = true
